--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "author": "Yossi Kolesnicov",
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-alpha.48",
-    "systemjs": "0.19.2",
-	"c3": "latest"
+    "angular2": "2.0.0-beta.0",
+    "systemjs": "0.19.2"
   },
   "devDependencies": {
     "live-server": "^0.8.2",
